# opencamera-for-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/atech/cameraapi/: FilterAdapter.java  GLCameraActivity.java  MainActivity.java  SelectedListener.java
app/src/main/res/layout/: activity_glcamera.xml  activity_main.xml
app/src/main/res/values/: strings.xml
demo/: build.gradle
demo/src/androidTest/java/com/atech/cameraapi/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/atech/cameraapi/: CameraActivity.java  FilterAdapter.java  FilterInfo.java  GLCameraActivity.java  MainActivity.java
demo/src/main/res/layout/: activity_camera.xml  activity_glcamera.xml  activity_main.xml  item_filter.xml
demo/src/test/java/com/atech/cameraapi/: ExampleUnitTest.java
glcamera/: build.gradle
glcamera/src/androidTest/java/com/atech/glcamera/: ExampleInstrumentedTest.java
glcamera/src/main/: AndroidManifest.xml
glcamera/src/main/assets/shaders/: fshader_16.glsl  fshader_7.glsl
glcamera/src/main/cpp/: CMakeLists.txt  JniImpl.cpp  yuv-decoder.c
glcamera/src/main/cpp/context/: RenderContext.cpp  RenderContext.h
glcamera/src/main/cpp/render/: GLUtils.cpp  GLUtils.h
glcamera/src/main/java/com/atech/glcamera/: CameraActivity.java  (+1 more)
glcamera/src/main/res/drawable/: bg_camera.xml
glcamera/src/main/res/layout/: activity_camera.xml
glcamera/src/main/res/raw/: amaro.glsl  antique.glsl  base_fragment_shader.glsl  base_vertex_shader.glsl  beauty.glsl  beauty_vertex.glsl  black_white_shader.glsl  blackcat.glsl  brannan.glsl  brooklyn.glsl  calm.glsl  cool.glsl  healthy.glsl  latte.glsl  romance.glsl  sakura.glsl  skinwhiten.glsl  sunrise.glsl  sunset.glsl  sweets.glsl  warm.glsl  whitecat.glsl
glcamera/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+63 files in other folders)
